--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>문정 엠스테이트 B동 1108호 | 매물 소개</title>
+  <title>문정 엠스테이트 | 매물 소개</title>
   <style>
     :root {
       --bg:#f6f7fb; --card:#fff; --text:21212; --muted:#6b7280; --line:#e5e7eb;
@@ -178,7 +178,7 @@
           <span class="tag">전문 중개</span>
           <span class="glow">문정동 대형사무실 전문 <span class="alpha">알파고</span><span class="estate">부동산</span></span>
         </div>
-<p class="sub">서울시 송파구 문정동 643-1, 문정 엠스테이트 B동 11층 1108호</p>
+<p class="sub">서울시 송파구 문정동 643-1, 문정 엠스테이트 </p>
       </div>
       <div class="badge">계약 483.25㎡ · 전용 242.38㎡</div>
     </div>
@@ -232,7 +232,7 @@
             <div class="big">2억 <span>/</span> 1,300만원</div>
             <div style="height:1px;background:var(--line);margin:12px 0;"></div>
             <div class="label">주소</div>
-            <div class="value" style="font-size:14px;font-weight:800;line-height:1.5;">서울시 송파구 문정동 643-1, 문정 엠스테이트 B동 11층 1108호</div>
+            <div class="value" style="font-size:14px;font-weight:800;line-height:1.5;">서울시 송파구 문정동 643-1, 문정 엠스테이트 </div>
           </div>
 
           <div class="box">
@@ -255,7 +255,7 @@
   <div class="sticky">
     <div class="inner">
       <div>
-        <div class="t1">문정 엠스테이트 B동 1108호 · 임대</div>
+        <div class="t1">문정 엠스테이트 · 임대</div>
         <div class="t2">2억 / 1,300만원 · 전용 242.38㎡</div>
       </div>
       <div class="actions">
