--- a/index.html
+++ b/index.html
@@ -191,10 +191,7 @@
           <button class="navbtn next" id="nextBtn" aria-label="다음">→</button>
         </div>
         <div class="thumbs" id="thumbs">
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113.jpg" aria-label="사진 1"><img src="assets/KakaoTalk_20260209_175045113.jpg" alt="썸네일 1"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_02.jpg" aria-label="사진 2"><img src="assets/KakaoTalk_20260209_175045113_02.jpg" alt="썸네일 2"></button>
 <button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_03.jpg" aria-label="사진 3"><img src="assets/KakaoTalk_20260209_175045113_03.jpg" alt="썸네일 3"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_01.jpg" aria-label="사진 4"><img src="assets/KakaoTalk_20260209_175045113_01.jpg" alt="썸네일 4"></button>
 <button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_04.jpg" aria-label="사진 5"><img src="assets/KakaoTalk_20260209_175045113_04.jpg" alt="썸네일 5"></button>
 <button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_05.jpg" aria-label="사진 6"><img src="assets/KakaoTalk_20260209_175045113_05.jpg" alt="썸네일 6"></button>
 <button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_06.jpg" aria-label="사진 7"><img src="assets/KakaoTalk_20260209_175045113_06.jpg" alt="썸네일 7"></button>
@@ -266,7 +263,7 @@
   </div>
 
   <script>
-    const images = ["assets/KakaoTalk_20260209_175045113.jpg","assets/KakaoTalk_20260209_175045113_02.jpg","assets/KakaoTalk_20260209_175045113_03.jpg","assets/KakaoTalk_20260209_175045113_01.jpg","assets/KakaoTalk_20260209_175045113_04.jpg","assets/KakaoTalk_20260209_175045113_05.jpg","assets/KakaoTalk_20260209_175045113_06.jpg","assets/KakaoTalk_20260209_175045113_07.jpg","assets/KakaoTalk_20260209_175045113_08.jpg","assets/KakaoTalk_20260209_175045113_09.jpg","assets/KakaoTalk_20260209_175045113_10.jpg"];
+    const images = ["assets/KakaoTalk_20260209_175045113_03.jpg","assets/KakaoTalk_20260209_175045113_04.jpg","assets/KakaoTalk_20260209_175045113_05.jpg","assets/KakaoTalk_20260209_175045113_06.jpg","assets/KakaoTalk_20260209_175045113_07.jpg","assets/KakaoTalk_20260209_175045113_08.jpg","assets/KakaoTalk_20260209_175045113_09.jpg","assets/KakaoTalk_20260209_175045113_10.jpg"];
     let idx = 0;
 
     const mainImg = document.getElementById('mainImg');
