--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>문정 엠스테이트 B동 1108호 | 매물 소개</title>
+  <title>문정 엠스테이트  | 매물 소개</title>
   <style>
     :root {
       --bg:#f6f7fb; --card:#fff; --text:21212; --muted:#6b7280; --line:#e5e7eb;
@@ -178,7 +178,7 @@
           <span class="tag">전문 중개</span>
           <span class="glow">문정동 대형사무실 전문 <span class="alpha">알파고</span><span class="estate">부동산</span></span>
         </div>
-<p class="sub">서울시 송파구 문정동 643-1, 문정 엠스테이트 B동 11층 1108호</p>
+<p class="sub">서울시 송파구 문정동 643-1, 문정 엠스테이트 </p>
       </div>
       <div class="badge">계약 483.25㎡ · 전용 242.38㎡</div>
     </div>
@@ -190,16 +190,7 @@
           <button class="navbtn prev" id="prevBtn" aria-label="이전">←</button>
           <button class="navbtn next" id="nextBtn" aria-label="다음">→</button>
         </div>
-        <div class="thumbs" id="thumbs">
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_03.jpg" aria-label="사진 3"><img src="assets/KakaoTalk_20260209_175045113_03.jpg" alt="썸네일 3"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_04.jpg" aria-label="사진 5"><img src="assets/KakaoTalk_20260209_175045113_04.jpg" alt="썸네일 5"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_05.jpg" aria-label="사진 6"><img src="assets/KakaoTalk_20260209_175045113_05.jpg" alt="썸네일 6"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_06.jpg" aria-label="사진 7"><img src="assets/KakaoTalk_20260209_175045113_06.jpg" alt="썸네일 7"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_07.jpg" aria-label="사진 8"><img src="assets/KakaoTalk_20260209_175045113_07.jpg" alt="썸네일 8"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_08.jpg" aria-label="사진 9"><img src="assets/KakaoTalk_20260209_175045113_08.jpg" alt="썸네일 9"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_09.jpg" aria-label="사진 10"><img src="assets/KakaoTalk_20260209_175045113_09.jpg" alt="썸네일 10"></button>
-<button class="thumb" data-src="assets/KakaoTalk_20260209_175045113_10.jpg" aria-label="사진 11"><img src="assets/KakaoTalk_20260209_175045113_10.jpg" alt="썸네일 11"></button>
-</div>
+        <div class="thumbs" id="thumbs"></div>
 
         <div class="content">
           <p class="section-title">핵심 요약</p>
@@ -229,7 +220,7 @@
             <div class="big">2억 <span>/</span> 1,300만원</div>
             <div style="height:1px;background:var(--line);margin:12px 0;"></div>
             <div class="label">주소</div>
-            <div class="value" style="font-size:14px;font-weight:800;line-height:1.5;">서울시 송파구 문정동 643-1, 문정 엠스테이트 B동 11층 1108호</div>
+            <div class="value" style="font-size:14px;font-weight:800;line-height:1.5;">서울시 송파구 문정동 643-1, 문정 엠스테이트 </div>
           </div>
 
           <div class="box">
@@ -252,7 +243,7 @@
   <div class="sticky">
     <div class="inner">
       <div>
-        <div class="t1">문정 엠스테이트 B동 1108호 · 임대</div>
+        <div class="t1">문정 엠스테이트 · 임대</div>
         <div class="t2">2억 / 1,300만원 · 전용 242.38㎡</div>
       </div>
       <div class="actions">
