--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   </div>
 
   <script>
-    const images = ["assets/KakaoTalk_20260209_175045113_03.jpg","assets/KakaoTalk_20260209_175045113_04.jpg","assets/KakaoTalk_20260209_175045113_05.jpg","assets/KakaoTalk_20260209_175045113_06.jpg","assets/KakaoTalk_20260209_175045113_07.jpg","assets/KakaoTalk_20260209_175045113_08.jpg","assets/KakaoTalk_20260209_175045113_09.jpg","assets/KakaoTalk_20260209_175045113_10.jpg"];
+    const images = ["assets/KakaoTalk_20260209_175045113_03.jpg","assets/KakaoTalk_20260209_175045113_05.jpg","assets/KakaoTalk_20260209_175045113_06.jpg","assets/KakaoTalk_20260209_175045113_07.jpg","assets/KakaoTalk_20260209_175045113_08.jpg","assets/KakaoTalk_20260209_175045113_09.jpg","assets/KakaoTalk_20260209_175045113_10.jpg"];
     let idx = 0;
 
     const mainImg = document.getElementById('mainImg');
